# little_witch

./: CMakeLists.txt  Change_Log.md  Current_State.md  Project_Architecture.md  Target_Architecture_2.0.md  download_font.py
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/littlewitchadventure/: AdMobBridge.java  MainActivity.java
assets/shaders/gles/: bloom_blur.fs  bloom_extract.fs  fireball.fs  fluid.fs  ice_blast.fs  lightning.fs  poison_cloud.fs  shield.fs  shuriken.fs  tornado.fs  vapor.fs
assets/shaders/glsl330/: bloom_blur.fs  bloom_extract.fs  fireball.fs  fluid.fs  ice_blast.fs  lightning.fs  poison_cloud.fs  shield.fs  shuriken.fs  tornado.fs  vapor.fs
include/: admob_bridge.h  biome.h  biome_procedural.h  config.h  enemy.h  enemy_boss.h  enemy_normal.h  game.h  particle.h  save.h  skill.h  star.h  trail.h  ui.h  witch.h
include/biomes/: biome.h
include/core/: collision.h  config.h  game.h  gameplay.h  lightmap.h  particle.h  resource_loader.h
include/enemies/: enemy.h
include/screens/: screen.h
include/skills/: fireball_skill.h  fluid_skill.h  lightning_skill.h  magnet_skill.h  poison_cloud_skill.h  shield_skill.h  shuriken_skill.h  skill.h
src/: admob_bridge.c  biome.c  biome_procedural.c  enemy.c  enemy_boss.c  enemy_normal.c  fluid_skill.c  main.c  particle.c  save.c  skill.c  star.c  trail.c  ui.c  witch.c
src/biomes/: biome.c
src/core/: admob_bridge.c  collision.c  gameplay.c  lightmap.c  main.c  resource_loader.c  witch.c
src/enemies/: enemy.c
src/enemies/bosses/: boss_cave.c  boss_city.c  boss_forest.c  boss_space.c
src/enemies/normal/: alien.c  bat.c  drone.c  ghost.c  robot.c  slime.c  ufo.c
src/screens/: screen.c
src/skills/: fireball_skill.c  fluid_skill.c  lightning_skill.c  magnet_skill.c  poison_cloud_skill.c  shield_skill.c  shuriken_skill.c  skill.c
test_skill/: CMakeLists.txt  electric_skill.c  electric_skill.h  fire_skill.c  fire_skill.h  fluid_skill.c  fluid_skill.h  main.c  metal.fs  metal_skill.c  metal_skill.h  wood_skill.c  wood_skill.h
